Fix indexing error for dynamoDb